# pg-recorder

./: .gitignore  Dockerfile  README.md  act-recorder.cabal  build-docker.sh  circle.yml  pg-recorder.cabal  stack.yaml
app/: Main.hs
src/: ActRecorder.hs  PgRecorder.hs
src/ActRecorder/: Config.hs  Prelude.hs
src/PgRecorder/: Config.hs  Database.hs  Prelude.hs
test/: DatabaseSpec.hs  Spec.hs
